--- a/Scrappers/scrapy.cfg
+++ b/Scrappers/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = ourfirstscraper.settings
+default = epolitics.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = ourfirstscraper
+project = epolitics
